# Ray_Tracer

./: CMakeLists.txt  Makefile  README.md  miniRT
include/: minirt.h  mlx_defines.h  vector.h
includes/: figures.h  minirt.h  vector.h
lib/ft/: CMakeLists.txt  README.md
lib/ft/include/: cfstream.h  clist.h  cstring.h  libft.h
lib/ft/src/: ft_filecpy.c  ft_filememdel.c  ft_fopen.c  ft_get_file.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_push_back.c  get_next_line.c  get_next_line_utils.c
lib/ftprintf/: CMakeLists.txt
lib/ftprintf/include/: ft_printf.h  printf_events.h
lib/ftprintf/src/: ft_digit_functions.c  ft_events.c  ft_printf.c  ft_prints.c  ft_type_digit.c  ft_type_hex.c  ft_type_others.c  ft_type_strings.c  ft_type_udigit.c  ft_type_upperhex.c  utils.c  utils2.c
lib/mlx/macOS/: Makefile
libraries/libft/: Makefile
libraries/libft/includes/: ft_printf.h  get_next_line.h  libft.h
libraries/libft/sources/ft_printf/: ft_digit_functions.c  ft_events.c  ft_printf.c  ft_prints.c  ft_type_digit.c  ft_type_hex.c  ft_type_others.c  ft_type_strings.c  ft_type_udigit.c  ft_type_upperhex.c
libraries/libft/sources/get_next_line/: get_next_line.c  get_next_line_utils.c
libraries/libft/sources/libft/: ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_push_back.c  ft_split.c
libraries/libvector/: Makefile  vector_operations2.c  vector_operations3.c
resources/scenes/: everything.rt  sphere.rt
scenes/: columns.rt
sources/: bmp_exporter.c  camera.c  concerning_light.c  multithreading.c  parse_info.c  parsing_utils2.c  plane_intersection.c  utils2.c
src/: bmp_exporter.c  camera.c  color_operations.c  compound_intersections.c  cylinder_intersection.c  error_handling.c  minirt.c  parse_compound_elements.c  parse_elements.c  parsing.c  parsing_utils.c  procedural_textures.c  rainbow.c  sample_pixel.c  sphere_intersection.c  supersampling.c  utils.c  vector_operations.c
